--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         }
 
         .section1 {
-            background-image: url('./image/acc1.jpg');
+            background-image: url('./images/acc1.jpg');
             background-repeat: no-repeat;
             background-size: cover;
             /* opacity: 0.5; */
