--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             align-items: center;
         }
         .headersection{
-            text-align: center;
+            display: flex;
             padding-bottom: 50px;
         }
     </style>
@@ -85,7 +85,14 @@
 <div class="content">
     <div class="headersection">
         <!-- <h1>STUDENT ACCOMODATIONS</h1> -->
-        <img src="./images/image.png" alt="" srcset="">
+        <img src="./images/image.png" style="padding-right: 15px;" alt="" srcset="">
+        <div >
+            <p>Mumbai Student? Find Your Perfect Pad Fast!</p>
+            <p>Search & Filter Hostels & Apartments for Rent in Minutes. ✅</p>
+            <p>Affordable Options, Safe Locations, Student-Friendly Amenities.</p>
+            <p>Ditch the Broker! Find Your Dream Student Accommodation Now.</p>
+            <p>Free Listings - Start Your Mumbai Student Housing Hunt Today!</p>
+        </div>
     </div>
     <div>
         <div class="formstyle form-col1">
@@ -125,7 +132,7 @@
             <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1" previewlistener="true">
               <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
             </a>
-            <span class="mb-3 mb-md-0 text-body-secondary">© 2024 Studend House - Project Dormify</span>
+            <span class="mb-3 mb-md-0 text-body-secondary">© 2024 Student House - Project Dormify</span>
           </div>
       
           <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
