--- a/search.html
+++ b/search.html
@@ -238,7 +238,7 @@
         "Type": "Hostel",
         "Subtype": "male",
         "Address": {
-            "location": "has a 3.9 star rating on Google Maps and is located at S.V.Road, Nadiadwala Colony No.1, Malad, Nadiyawala Colony 2, Malad West, Mumbai, Maharashtra 400064, India.",
+            "location": "located at S.V.Road, Nadiadwala Colony No.1, Malad, Nadiyawala Colony 2, Malad West, Mumbai, Maharashtra 400064, India.",
             "coord": "19.180634001578106, 72.84694577617105"
             
         },
