--- a/search.html
+++ b/search.html
@@ -594,7 +594,7 @@
                             ₹ ${minPrice}&nbsp;&nbsp;  
                         </div>
                    </div>  
-                    <button class="btn btn-primary">View Accomodation</button>
+                    <button class="btn btn-success">View Accomodation</button>
                 </div>   
             </div>
         </div>`
